# beat707

./: .gitignore  README.md
code/Beat707nxt/: Beat707nxt.ino  Data_Save_Load.ino  Debug.ino  Extras.ino  Functions.h  Interface.ino  Interface_Menu.ino  Lib_Flash.h  Lib_Flash.ino  MIDI_Input.ino  MuteSolo.ino  SPI.h  SPI.ino  Sequencer.ino  TM1638.ino  Variables.h
code/Beat707nxt_1pattern/: Beat707nxt_1pattern.ino  Debug.ino  EEPROM.ino  Extras.ino  Functions.h  Interface.ino  Interface_Menu.ino  MIDI_Input.ino  Memory Usage.ods  MuteSolo.ino  Sequencer.ino  TM1638.ino  Variables.h
code/brainboard-test/: brainboard-test.ino
kicad/beat707/: B3F-through-hole.kicad_mod  DIN-Socket.kicad_mod  K2-1103SP-A4SW-04.kicad_mod  Memory Module.sch  _saved_beat707.sch  beat707-cache.lib  beat707-rescue.lib  beat707.bck  beat707.dcm  beat707.kicad_mod  beat707.kicad_pcb  beat707.kicad_pcb-bak  beat707.lib  beat707.net  beat707.pro  beat707.sch  brain-board-cache.lib  brain-board.kicad_pcb  brain-board.pro  brain-board.sch  button.blend  button.blend1  button.wrl  din-5.kicad_mod  din5.blend  din5.wrl  encoder.blend  (+23 more)
vcvrack/Beat707/: .gitignore  CMakeLists.txt  Makefile  interface.py  plugin.json
vcvrack/Beat707/src/: Beat707Simulation.cpp  gui.h  hardware.cpp  hardware.h  plugin.cpp  plugin.hpp
vcvrack/Beat707/src_logic/: Beat707nxt.cpp  Data_Save_Load.cpp  Debug.cpp  Extras.cpp  Functions.h  Interface.cpp  Interface_Menu.cpp  MIDI_Input.cpp  MuteSolo.cpp  Sequencer.cpp  TM1638.cpp  Variables.h  declarations.h  flash.cpp  flash.h
vcvrack/Beat707/src_test/: main.cpp
(+1 files in other folders)
